2009-11-03  Alberto Garcia  <agarcia@igalia.com>

	* build-package.sh
	* debian/control.maemo5:
	Added control file for Maemo 5.

2009-11-01  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* src/util.c (get_md5_hash):
	Drop support for libgcrypt.

2009-10-30  Alberto Garcia  <agarcia@igalia.com>

	* src/audio.c:
	Set GStreamer elements to play MP3 in Maemo 5.

2009-10-30  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac:
	Disable the Maemo status bar plugin in Maemo 5.

2009-10-24  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* data/servers.xml.in
	* src/Makefile.am:
	Disable the Last.fm server in Maemo 5.

2009-10-24  Alberto Garcia  <agarcia@igalia.com>

	* Makefile.am
	* data/servers.xml
	* src/vgl-server.[ch]:
	Read the list of servers from a config file rather than having
	them hardcoded in the source code.

	* src/controller.c (controller_run_app):
	Show a fatal error if there are no servers defined.

2009-10-24  Andrea Grandi  <a.grandi@gmail.com>

	* po/it.po: Updated Italian translation

2009-10-22  Alberto Garcia  <agarcia@igalia.com>

	* src/uimisc.c (ui_usercfg_window):
	Change position of 'Help' button in Maemo 5

2009-10-15  Rodrigo Flores <rodrigomarquesflores@gmail.com>

	* po/pt_BR.po: Updated Portuguese (Brazilian) translation

2009-10-15  Marcos Garcia  <marcosgg@gmail.com>

	* po/pt.po: Updated Portuguese translation

2009-10-15  Julien Duponchelle  <julien@duponchelle.info>

	* po/fr.po: Updated French translation

2009-10-08  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac:
	Detect Maemo 5

2009-10-08  Alberto Garcia  <agarcia@igalia.com>

	* configure.ac
	* src/audio.c:
	Use #ifdef HAVE_DSPMP3SINK rather than #ifdef MAEMO in audio.c

2009-10-06  Pēteris Caune  <cuu508@gmail.com>

	* po/lv.po: Updated Latvian translation

2009-10-05  Oskar Welzl  <mail@welzl.info>

	* po/de.po: Updated German translation

2009-10-05  Dawid Pakuła  <zulus@w3des.net>

	* po/pl.po: Updated polish translation
